new streamlit design to show table with penthouses are underpriced and overpriced

--- a/notebooks/penthouse_eda.ipynb
+++ b/notebooks/penthouse_eda.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(penthouses_data)"
+    "# logger.info(penthouses_data)"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "# sample_penthouse = penthouses_data['98964731']\n",
     "\n",
     "def get_price_data(id, flat_data, results):\n",
-    "    print(flat_data)\n",
+    "    logger.info(flat_data)\n",
     "    res = []\n",
     "    flat_size = flat_data['size']\n",
     "\n",
@@ -172,7 +172,7 @@
     "    latest_flat_price = results[id]['latestPrice']\n",
     "    res.append(latest_flat_price)\n",
     "\n",
-    "    print(res)\n",
+    "    logger.info(res)\n",
     "\n",
     "\n",
     "for penthouse_id, penthouse_data in penthouses_data.items():\n",
