--- a/src/visualisation.ipynb
+++ b/src/visualisation.ipynb
@@ -31187,9 +31187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns in the database: 181\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Number of columns in the database: {len(list(df))}\")"
    ]
