--- a/src/penthouse_prices.ipynb
+++ b/src/penthouse_prices.ipynb
@@ -31164,7 +31164,7 @@
    "source": [
     "df = df.loc[df[\"size\"] < 300.0]\n",
     "\n",
-    "# df = df.loc[df[\"penthouse\"] == True]\n",
+    "df = df.loc[df[\"penthouse\"] == True]\n",
     "\n",
     "distr_list = [\n",
     "    \"Centro\", \"Ciutat_Vella\", \"LEixample\", \"Algirós\", \"Camins_al_Grau\", \"Quatre_Carreres\", \"Poblats_Marítims\"]\n",
